# robocpp

./: .gitignore  CONFORMANCE.md  Cargo.toml  LICENSE-MIT  PRODUCTION_READINESS.md  README.md  TODO.md  skills-lock.json
.github/workflows/: release.yml  rust.yml  scheduled-validation.yml
crates/iec_c/: Cargo.toml
crates/iec_c/src/: addressing.rs  expressions.rs  fb.rs  functions.rs  lib.rs  state.rs  tests.rs
crates/iec_diagnostics/: Cargo.toml
crates/iec_diagnostics/src/: lib.rs
crates/iec_ir/: Cargo.toml
crates/iec_ir/src/: lib.rs
crates/iec_language_service/: Cargo.toml
crates/iec_language_service/src/: actions.rs  c_metadata.rs  capabilities.rs  debug.rs  diagnostics_ext.rs  docs.rs  formatter.rs  graph.rs  incremental.rs  lib.rs  refactor.rs  runtime_service.rs  source.rs  symbols.rs  types.rs  workspace.rs
crates/iec_language_service/tests/: ide_service.rs
crates/iec_language_service/tests/fixtures/: counter.st
crates/iec_language_service_wasm/: Cargo.toml  IDE_CONTRACT.md
crates/iec_language_service_wasm/src/: lib.rs
crates/iec_language_service_wasm/tests/fixtures/: ide_contract_schema.json  plcopen_ide_graph.xml  plcopen_ide_graph_expected.json
crates/iec_plcopen/: Cargo.toml
crates/iec_plcopen/src/: dom.rs  export.rs  graph.rs  import.rs  lib.rs  model.rs  parse.rs  sfc.rs  tests.rs  validate.rs
crates/iec_profile/: Cargo.toml
crates/iec_profile/src/: lib.rs
crates/iec_runtime/: Cargo.toml
crates/iec_runtime/src/: configuration.rs  lib.rs  runtime.rs  state.rs  support.rs  tests.rs
crates/iec_semantics/: Cargo.toml
crates/iec_semantics/src/: calls.rs  configuration.rs  declarations.rs  expressions.rs  lib.rs  statements.rs  support.rs  tests.rs  types.rs
crates/iec_stdlib/: Cargo.toml
crates/iec_stdlib/src/: lib.rs
crates/iec_syntax/: Cargo.toml
crates/iec_syntax/src/: il.rs  lexer.rs  lib.rs  literal.rs  parser.rs  tests.rs  token.rs
crates/rbcpp_cli/: Cargo.toml
crates/rbcpp_cli/src/: main.rs
crates/rbcpp_cli/tests/: examples.rs
crates/rbcpp_target/: Cargo.toml
crates/rbcpp_target/src/: lib.rs
crates/rbcpp_target_bridge/: Cargo.toml
crates/rbcpp_target_bridge/src/: main.rs  modbus_transport.rs  session.rs
docs/: iec61131-2003-checklist.md
examples/: aggregates.st  all_data_types.st  configuration.st  control_flow.st  conversions.st  function_blocks.st  functions.st  instruction_list.il  instruction_list.st  instruction_list_calls.st  instruction_list_jumps.st  native_fbd.fbd  native_ladder.ld  plcopen_fbd.xml  plcopen_ld.xml  plcopen_sfc.xml  sequence.sfc  sfc_qualifiers.st  sfc_sequence.st  st_bit_ops.st  strings_dates.st  timers.st
fuzz/: Cargo.toml  README.md
fuzz/corpus/pipeline/: counter.st
fuzz/corpus/plcopen_dom_lowering/: vendor_edge_cases.xml
fuzz/corpus/plcopen_roundtrip/: simple_fbd.xml
fuzz/corpus/plcopen_xml/: simple_fbd.xml
fuzz/corpus/textual_parser/: native_ladder.ld
fuzz/fuzz_targets/: pipeline.rs  plcopen_dom_lowering.rs  plcopen_roundtrip.rs  plcopen_xml.rs  textual_parser.rs
ide/web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
ide/web/docs/: TARGET_BRIDGE.md
ide/web/e2e/: graph-project-crud.spec.ts  ide-smoke.spec.ts
ide/web/scripts/: assemble-app.mjs  check-bundle-size.mjs  dev-with-target.sh  fix-imports.mjs  wasm-build.sh
ide/web/src/: index.css  main.tsx  styles.css  wasm.d.ts
ide/web/src/app/: App.tsx  EditorSurface.tsx  types.ts
ide/web/src/lib/: artifactCompare.ts  artifactLifecycle.ts  callHierarchy.ts  diagnosticQuickFixes.ts  editorHover.ts  graphStaleSource.ts  iecValueValidation.ts  keyboardShortcuts.ts  projectDirty.ts  supportDiagnostics.ts  symbolNavigation.ts  traceTrend.ts
ide/web/src/services/: languageServiceBackend.ts  localAnalysis.ts  localDebug.ts  localRunner.ts  telemetry.ts  wasmClient.ts
ide/web/src/stores/: artifactStore.ts  forcedValuesStore.ts  settingsStore.ts
ide/web/src/test/: a11y.test.tsx  artifactLifecycle.test.ts  browserSmoke.test.tsx  commandBar.test.tsx  deployDiff.test.ts  diagnosticQuickFixes.test.ts  editorHover.test.ts  editorSearch.test.ts  editorTabsStore.test.ts  golden.test.ts  graphCache.test.ts  graphCompare.test.ts  perf.test.ts  (+16 more)
validation/: DIAGNOSTICS.md  LIMITS.md  README.md  STATUS.toml
validation/corpus/accepted/: counter.st  instruction_list.il  native_fbd.fbd  native_ladder.ld
validation/corpus/c-parity/: counter_codegen.st
validation/corpus/regressions/: README.md  array_repetition_count_limit.diag  array_repetition_count_limit.st
validation/corpus/rejected/: bad_access_path.diag  bad_access_path.st  bad_assignment.diag  bad_assignment.st  bad_call.diag  bad_call.st  bad_config.diag  bad_config.st  bad_fbd.diag  bad_fbd.fbd  bad_il_label.diag  bad_il_label.il  bad_ladder.diag  bad_ladder.ld  bad_sfc_transition.diag  bad_sfc_transition.sfc  malformed_plcopen.diag  malformed_plcopen.xml  missing_end_program.st  source_size_limit.diag  source_size_limit.st
validation/corpus/runtime/: counter_cycles.st  counter_cycles.trace
validation/corpus/stress/: deep_expression.st
validation/deployment/: generated-c-hal-example.c
validation/differential/: README.md  external-runs.md
validation/releases/: README.md  RELEASE_NOTES_CURRENT.md  current.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+74 files in other folders)
