[package]
name = "iec_c"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
iec_diagnostics = { path = "../iec_diagnostics" }
iec_ir = { path = "../iec_ir" }

[dev-dependencies]
iec_runtime = { path = "../iec_runtime" }
iec_syntax = { path = "../iec_syntax" }

[lints]
workspace = true
