[package]
name = "rbcpp_target_bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rbcpp-target-bridge"
path = "src/main.rs"

[dependencies]
iec_ir = { path = "../iec_ir" }
rbcpp_target = { path = "../rbcpp_target" }
modbus = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
